<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="own.gpg.za.oopswhatnow.activity.RegistrationActivity">

    <!--<include layout="@layout/content_registration" />-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_send"
        app:elevation="5dp"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@android:color/holo_blue_dark" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:elevation="5dp"
                app:logo="@drawable/icon"
                app:logoDescription="@string/app_name"
                app:title="@string/title_activity_registration" />

        </android.support.design.widget.AppBarLayout>


        <!--<LinearLayout-->
        <!--android:id="@+id/content_registration"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
        <!--tools:context="own.gpg.za.oopswhatnow.activity.RegistrationActivity" >-->

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_fname"
            android:imeActionId="@+id/fname"
            android:imeActionLabel="@string/reg_fname"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_lname"
            android:imeActionId="@+id/lname"
            android:imeActionLabel="@string/reg_lname"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true" />


        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_mobile"
            android:imeActionId="@+id/mobile"
            android:imeActionLabel="@string/reg_mobile"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/contacts_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/reg_info_contacts"
            android:text="@string/reg_info_contacts"
            android:layout_alignTop="@+id/choose_contacts_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <Button
            android:id="@+id/choose_contacts_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/action_choose_contact"
            android:elevation="8dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/invites_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/reg_invites_to_send"
            android:text="@string/reg_invites_to_send"
            android:layout_alignBottom="@+id/choose_contacts_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TableLayout android:id="@+id/reg_friend_table"
            android:background="#3d455b"
            android:layout_alignBottom="@+id/invites_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
